@@ -127,7 +127,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2020-2024 Michal Josef Špaček
+    © 2020-2025 Michal Josef Špaček
 
     BSD 2-Clause License
 
