@@ -1,4 +1,5 @@
 0.14
+ - Update copyright years.
 
 0.13 2024-11-10T17:20:57+01:00
  - Add Value::Lexeme to Wikibase::Datatype::Struct doc.
